several updates and bug fixes to the parser